# rapid-trader

./: .env.example  .env.template  .gitignore  CODEBASE_REMEDIATION_PLAN.md  IMPLEMENTATION_SUMMARY.md  INTEGRATION_SUCCESS_REPORT.md  POLYGON_INTEGRATION_SUMMARY.md  PROGRESS.md  PROJECT_STRUCTURE.md  README.md  SETUP_ENV_GUIDE.md  START_HERE.md  TASKS.md  pyproject.toml  pytest.ini  run_daily_job.py  test_alpaca_migration.py
.claude/: settings.local.json
.cursor/rules/: logging-rule.mdc
cache/: us_holidays_2025.json
docs/: FMP_SETUP.md  MINIMAL_CORE_PACK.md  POLYGON_SETUP.md  README.md  SP500_DATA_SOURCE.md  SUPABASE_SETUP.md  environment-setup.md  mvp_enhancements_addendum.md  rapidtrader_mvp_spec.md  runbook.md  signals_and_sizing.md  technical_trading_primer.md
examples/: fetch_sp500_from_ishares.py  generate_daily_report.py
reports/: daily_report_2025-08-29_20250901_230144.json  daily_report_2025-08-29_20250901_230144.txt  daily_report_2025-09-03_20250903_201439.json  daily_report_2025-09-03_20250903_201439.txt  daily_report_2025-09-03_20250903_202443.json  daily_report_2025-09-03_20250903_202443.txt  daily_report_2025-09-03_20250903_203626.json  daily_report_2025-09-03_20250903_203626.txt  daily_report_2025-09-03_20250903_204428.json  daily_report_2025-09-03_20250903_204428.txt
scripts/: README.md  apply_db_extensions.py  cleanup_sector_cache.py  diagnose_db_connection.py  rebuild_sic_database.py  seed_sp500.py  setup_db_extensions.sql  supabase_schema.sql  test_alpaca_connection.py  test_fmp_api.py  update_database.py
tests/: __init__.py  conftest.py
(+38 files in other folders)
