[project]
name = "rapidtrader"
version = "0.5.0"
requires-python = ">=3.11,<3.14"
dependencies = [
    "pandas>=2.2",
    "numpy>=1.26",
    "SQLAlchemy>=2.0",
    "psycopg[binary]>=3.2",
    "pydantic-settings>=2.4",
    "python-dotenv>=1.0",
    "alpaca-py>=0.21",
    "pandas-market-calendars>=4.4",
    "requests>=2.31",
    "structlog>=23.1.0",
    "python-json-logger>=2.0",
    "tenacity>=8.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.21.0",
    "pytest-mock>=3.11.0",
    "hypothesis>=6.82.0",
    "faker>=19.2.0",
    "freezegun>=1.2.2",
]

[tool.setuptools]
packages = ["rapidtrader"]
